--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,7 @@
-/* Include fonts */
+/* iclude fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-/* Root colors without theme */
+/* root colors without theme */
 :root {
     --text-color:                 #f4f4f4;
     --text-color-active:          #eeeeee;
@@ -33,13 +33,13 @@
     --UI-icon-dark-op:            #90909040;
 }
 
-/* Scrollbar disable only to Chrome users */
+/* scrollbar disable only to Chrome users */
 ::-webkit-scrollbar { width: 0px; height: 0px; }
 
-/* Styles for all pages */
+/* styles for all pages */
 html, body { margin: 0; overflow-x: hidden; transition: 350ms all; }
 h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { z-index: 2; transition: 200ms all; font-family: 'Montserrat'; word-wrap: break-word; letter-spacing: 0.1em; font-weight: 600; }
-/* Colors */
+/* colors */
 html, body { background: var(--bg-color); }
 h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { color: var(--text-color); }
 h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, a::selection, b::selection, td::selection, div::selection, svg::selection, li::selection, img::selection, button::selection, br::selection, input::selection, label::selection, span::selection, iframe::selection { background-color: var(--icon-color); color: var(--text-color-active); }
@@ -52,11 +52,11 @@ button:active { background-color: var(--button-color-active) !important; cursor:
 
 .content { padding: 24px 24px 96px 24px; }
 
+/* PC frame support */
 @media (max-width: 540px) {
     .pageble { width: 100vw;}
     .page { width: 100vw; }
 }
-
 @media (min-width: 541px) {
     .pageble { width: 100vw; display: flex; justify-content: center; }
     .page { width: 440px; }
