--- a/static/main.css
+++ b/static/main.css
@@ -7,6 +7,7 @@
     --text-color-active:          #eeeeee;
     --bg-color:                   #000000;
     --con-color:                  #101010;
+    --line-general-color:         #60606040;
     --button-color:               #303030;
     --button-color-hover:         #353535;
     --button-color-active:        #404040;
@@ -14,6 +15,18 @@
     --button-con-color-hover:     #353535;
     --button-con-color-active:    #404040;
     --icon-color:                 #707070;
+
+    --line-winter:  linear-gradient(to right, #00aaffb3, #0066ffb3);
+    --line-autumn:  linear-gradient(to right, #ffff00b3, #ffaa00b3);
+    --line-spring:  linear-gradient(to right, #00ff66b3, #00ff00b3);
+    --line-summer:  linear-gradient(to right, #ff6600b3, #ff0000b3);
+    --line-newyear: linear-gradient(to right, #ff0000b3 3%, #ffaa00b3 27%, #00ff00b3 65%, #0066ffb3 100%);
+
+    --UI-winter:  #007aff33;
+    --UI-autumn:  #ff7a0033;
+    --UI-spring:  #00ff3333;
+    --UI-summer:  #ff000033;
+    --UI-newyear: #00ff3333;
     
     --UI-icon-neutral:            #ffffff  ;
     --UI-icon-neutral-op:         #ffffff40;
@@ -37,8 +50,8 @@
 ::-webkit-scrollbar { width: 0px; height: 0px; }
 
 /* styles for all pages */
-html, body { margin: 0; overflow-x: hidden; transition: 350ms all; }
-h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { z-index: 2; transition: 200ms all; font-family: 'Montserrat'; word-wrap: break-word; letter-spacing: 0.1em; font-weight: 600; }
+html, body { margin: 0; overflow-x: hidden; transition: 400ms all; transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { z-index: 2; transition: 400ms all; transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); font-family: 'Montserrat'; word-wrap: break-word; letter-spacing: 0.1em; font-weight: 600; }
 /* colors */
 html, body { background: var(--bg-color); }
 h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { color: var(--text-color); }
@@ -50,11 +63,31 @@ button { background-color: var(--button-color); border: 0; cursor: pointer; bord
 button:hover { background-color: var(--button-color-hover) !important; cursor: pointer; }
 button:active { background-color: var(--button-color-active) !important; cursor: pointer; }
 
+.page, .pageble { min-height: 100vh; }
 .content { padding: 24px 24px 96px 24px; }
+
+/* page creator */
+.blockGeneral { 
+    min-height: 130px;
+    background: var(--con-color);
+    border-radius: 24px;
+    padding: 18px;
+}
+.lineGeneral {
+    height: 48px;
+    width: 100%;
+    background: var(--line-general-color);
+    border-radius: 100px;
+}
+.blockAdd { 
+    height: 0px;
+    background: var(--con-color);
+    border-radius: 24px;
+}
 
 /* PC frame support */
 @media (max-width: 540px) {
-    .pageble { width: 100vw;}
+    .pageble { width: 100vw; }
     .page { width: 100vw; }
 }
 @media (min-width: 541px) {
