--- a/static/main.css
+++ b/static/main.css
@@ -31,8 +31,8 @@
     
     --UI-icon-neutral:            #ffffff  ;
     --UI-icon-neutral-op:         #ffffff40;
-    --UI-icon-blue:               #2B6ABC  ;
-    --UI-icon-blue-op:            #2B6ABC40;
+    --UI-icon-blue:               #0000ff  ;
+    --UI-icon-blue-op:            #0000ff40;
     --UI-icon-green:              #00ff00  ;
     --UI-icon-green-op:           #00ff0040;
     --UI-icon-red:                #ff0000  ;
@@ -52,7 +52,7 @@
 
 /* styles for all pages */
 html, body { margin: 0; overflow-x: hidden; transition: 400ms all; transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); }
-h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { z-index: 2; transition: 400ms all; transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); font-family: 'Montserrat'; word-wrap: break-word; letter-spacing: 0.1em; font-weight: 600; }
+h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { z-index: 2; transition: 400ms all; transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); font-family: 'Montserrat'; word-wrap: break-word; letter-spacing: 0.05em; }
 /* colors */
 html, body { background: var(--bg-color); }
 h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { color: var(--text-color); }
@@ -66,6 +66,7 @@ button:active { background-color: var(--button-color-active) !important; cursor:
 
 .page, .pageble { min-height: 100vh; }
 .content { padding: 24px 24px 96px 24px; }
+.bold { font-weight: 600 !important; letter-spacing: 0.1em !important; }
 
 /* page creator */
 .blockGeneral { 
