--- a/static/main.css
+++ b/static/main.css
@@ -63,9 +63,9 @@ button { background-color: var(--con-color); border: 0; cursor: pointer; border-
 button:hover { background-color: var(--con-color-hover) !important; cursor: pointer; }
 button:active { background-color: var(--con-color-active) !important; cursor: pointer; }
 
-.conHA { background: var(--con-color); cursor: pointer;}
-.conHA:hover { background: var(--con-color-hover) !important; cursor: pointer; }
-.conHA:active { background: var(--con-color-active) !important; cursor: pointer; }
+.conHA, .buttonHome { background: var(--con-color); cursor: pointer;}
+.conHA:hover, .buttonHome:hover { background: var(--con-color-hover) !important; cursor: pointer; }
+.conHA:active, .buttonHome:active { background: var(--con-color-active) !important; cursor: pointer; }
 
 .BconHA { background: var(--button-con-color); cursor: pointer;}
 .BconHA:hover { background: var(--button-con-color-hover) !important; cursor: pointer; }
@@ -104,4 +104,42 @@ button:active { background-color: var(--con-color-active) !important; cursor: po
     .pageble { width: 100vw; display: flex; justify-content: center; }
     .page { width: 440px; }
     .max-modal { width: 440px !important; }
+}
+
+/* UI elements */
+
+.weekBlock, .dayBlock, .hourBlock, .minuteBlock, .secondBlock {
+    opacity: 0;
+    height: 24px;
+    width: 100%;
+    border-radius: 100px;
+    overflow: hidden;
+    display: flex !important;
+    align-items: center;
+    background: var(--line-general-color);
+}
+
+.weekLine, .dayLine, .hourLine, .minuteLine, .secondLine {
+    width: 0px;
+    height: 24px;
+    border-radius: 100px; 
+}
+
+.weekPer, .dayPer, .hourPer, .minutePer, .secondPer {
+    position: absolute;
+    font-size: 18px;
+    width: calc(100vw - 48px);
+    text-align: center;
+    margin: 0;
+}
+
+.conHA {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    background: var(--con-color);
+    border-radius: 24px;
+    margin-bottom: 16px;
+    padding: 18px;
 }
