--- a/static/main.css
+++ b/static/main.css
@@ -75,6 +75,8 @@ button:active { background-color: var(--con-color-active) !important; cursor: po
 .header { z-index: 3; width: 100%; display: flex; flex-direction: column; align-items: center; }
 .hdr { height: 68px; width: 100%; display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; }
 
+.modal, .max-modal, .full-modal, .full-max-modal { transition: 300ms all; }
+
 .blockGeneral { 
     height: 138px;
     background: var(--con-color);
