--- a/static/main.css
+++ b/static/main.css
@@ -38,12 +38,12 @@
 * {
     margin: 0;
     transition: 700ms all;
-    transition-timing-function: cubic-bezier(0,0,.38,1.12);
     font-family: 'Montserrat';
     word-break: keep-all;
     letter-spacing: 0.05em;
     cursor: default;
     color: var(--text-color);
+    user-select: none;
 }
 
 html, body { background: var(--bg-color); }
@@ -52,13 +52,14 @@ html, body { background: var(--bg-color); }
 @media (max-width: 540px) {
     .pageble { width: 100vw; }
     .page { width: 100vw; }
-    .weekPer, .dayPer, .hourPer, .minutePer, .secondPer, .countGenPer { width: calc(100vw - 80px - 36px); }
+    .weekPer, .dayPer, .hourPer, .minutePer, .secondPer, .countGenPer { width: calc(100vw - 48px - 36px); }
 }
 @media (min-width: 541px) {
     .pageble { width: 100vw; display: flex; justify-content: center; }
     .page { width: 440px; }
     .max-modal { width: 440px !important; }
-    .weekPer, .dayPer, .hourPer, .minutePer, .secondPer, .countGenPer { width: calc(440px - 80px - 36px); }
+    .full-max-modal { width: 392px !important; }
+    .weekPer, .dayPer, .hourPer, .minutePer, .secondPer, .countGenPer { width: calc(440px - 48px - 36px); }
 }
 
 h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, a::selection, b::selection, td::selection, div::selection, svg::selection, li::selection, img::selection, button::selection, br::selection, input::selection, label::selection, span::selection, iframe::selection, small::selection { background-color: var(--icon-color); color: var(--text-color-active); }
@@ -77,7 +78,7 @@ button:active { background-color: var(--con-color-active) !important; cursor: po
 .header { z-index: 3; width: 100%; display: flex; flex-direction: column; align-items: center; }
 .hdr { height: 68px; width: 100%; display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; }
 
-.modal, .max-modal, .full-modal, .full-max-modal { transition: 300ms all; }
+.modal, .max-modal, .full-modal, .full-max-modal { transition: 300ms all; transition-timing-function: cubic-bezier(0,0,.38,1.12); }
 
 .blockGeneral { 
     height: 138px;
