--- a/static/main.css
+++ b/static/main.css
@@ -115,6 +115,7 @@ button:active { background-color: var(--con-color-active) !important; cursor: po
     background: var(--con-color);
     border-radius: 24px;
     padding: 18px;
+    height: 192px;
 }
 
 .countLine {
